🎶 add song api handlers
